# QtJsonSerializer

./: CMakeLists.txt  Qt6JsonSerializer.sln  QtJsonSerializer.sln
examples/jsonserializer/Sample/: Sample.vcxproj  SampleQt6.vcxproj  SampleQt6.vcxproj.filters  main.cpp  samplegadget.h  sampleobject.h
src/: CMakeLists.txt
src/jsonserializer/: CMakeLists.txt  Qt5JsonSerializer.vcxproj  Qt5JsonSerializer.vcxproj.filters  Qt6JsonSerializer.vcxproj  Qt6JsonSerializer.vcxproj.filters  cborserializer.cpp  exception.cpp  exception.h  serializerbase.cpp
src/jsonserializer/typeconverters/: enumconverter.cpp  listconverter.cpp  mapconverter.cpp  multimapconverter.cpp
